Many small changes from Bug Bounty

--- a/ExponentialGrowth.Rmd
+++ b/ExponentialGrowth.Rmd
@@ -34,7 +34,7 @@ theme_set(theme_minimal())
 
 Some years ago I had the opportunity to teach about ecology and evolution in a master gardener program. I was thrilled and started thinking about all of the things I thought would be fun and useful to teach about. Then I learned that I had one evening, something like 2 or 3 hours. How on earth could I fit this all in? What was essential? Then, after some thought, I realized that if I could convey the power of exponential growth, and a bit about heritable variation, the rest followed. All these years later I still think that if I could convey one lesson it would be this: beware the awesome power of exponential growth.
 
-In that first class with master gardeners, and in many classes with undergraduate and graduate students since, we explored the classic lesson about doubling^[And yes, doubling and exponential growth are intimately linked.] on a chess board. The [almost certainly apocryphal story](https://en.wikipedia.org/wiki/Wheat_and_chessboard_problem) goes something like this: The king/emperor/bigwig was so thrilled with the new game of chess that he reward its inventor with anything he might desire. The clever game-maker offered the modest suggestion that he receive a single grain of rice^[Or wheat, depending on the version.] on the first square, two on the second square, four on the third and so on and so forth. In the end this amounted to more grain or rice than existed in the kingdom and so, depending on the version, the inventor is either made an adviser (or king in the version I was told) or executed. Nice story and all, but without some numbers it lacks a certain oomph. So, how much rice or wheat is that?
+In that first class with master gardeners, and in many classes with undergraduate and graduate students since, we explored the classic lesson about doubling^[And yes, doubling and exponential growth are intimately linked.] on a chess board. The [almost certainly apocryphal story](https://en.wikipedia.org/wiki/Wheat_and_chessboard_problem) goes something like this: The king/emperor/bigwig was so thrilled with the new game of chess that he rewarded its inventor with anything he might desire. The clever game-maker offered the modest suggestion that he receive a single grain of rice^[Or wheat, depending on the version.] on the first square, two on the second square, four on the third and so on and so forth. In the end this amounted to more grain or rice than existed in the kingdom and so, depending on the version, the inventor is either made an adviser (or king in the version I was told) or executed. Nice story and all, but without some numbers it lacks a certain oomph. So, how much rice or wheat is that?
 
 ```{r}
 chess <- data.frame(Square = 1:10)
@@ -76,7 +76,7 @@ knitr::include_graphics('Rice_Nutrition.png', dpi = 500)
 
 Let's try again. What is the total rice production in the world? [Wolfram Alpha](https://www.wolframalpha.com/input/?i=2^64+grains+of+rice) places it at 2.573 billion metric tons per year or $2.573 \times 10^9 \text{tons} \times 1000 \text{kg/ton} = 2.573 \times 10^{12} \text{kg}$. That's a lot! But it still pales in comparison to the $9.2 \times 10^{14} \text{kg}$ that the chessboard rice is estimated to weigh (see the nutrition panel above). In other words, we produce several _hundred_ times less rice in a year than would have been on that chess board if the king or emperor had been able to follow through on the deal. Zowie!
 
-I am by no means the first to use this example or to try to provide some context to the numbers^[Just search online for "exponential growth chess board" and you'll find TED talks, YouTube videos, stock photos, and even [displays worthy of a science museum](https://makershare.com/projects/chess-board-rice-exponential-growth)]. The numbers are pretty mind boggling and so many have tried to put them in perspective. But it is important to note that doubling processes, and exponential growth more broadly, is interesting not just because you can get really, really huge numbers, but because of how you get there^[For instance, by the 13th square you would have enough rice for one bowl of rice, but by the 24th you would have enough rice to make the worlds largest paella (2400 bowls of rice)! Do with this information what you will.]. 
+I am by no means the first to use this example or to try to provide some context to the numbers^[Just search online for "exponential growth chess board" and you'll find TED talks, YouTube videos, stock photos, and even [displays worthy of a science museum](https://www.youtube.com/watch?v=wNJVvwhU3a0)]. The numbers are pretty mind boggling and so many have tried to put them in perspective. But it is important to note that doubling processes, and exponential growth more broadly, is interesting not just because you can get really, really huge numbers, but because of how you get there^[For instance, by the 13th square you would have enough rice for one bowl of rice, but by the 24th you would have enough rice to make the worlds largest paella (2400 bowls of rice)! Do with this information what you will.]. 
 
 
 # Doubling processes can sneak up you
@@ -288,7 +288,7 @@ R + scale_y_log10("Rice on square x",
 ```
 It turns out that _when_ the rules were changed and the pace of increase was changed is really critical. If the king changed the rules half-way through, after square 32, the amount of rice on the last square dropped from 9 quintillion---several hundred times the annual rice production in recent years---to a mere 3.5 trillion---less than 0.01\% of annual rice production. Thousands of thousands of times less rice! The payout would have gone from impossible to just quite expensive. And if the king changed the rules at square sixteen the amount of rice on the last square would be a mere couple billion grains, just 140 tonnes and easily accomplished. If he was very savvy and changed the rules after square 4, the last spot on the board would have had only 8 million or so grains of rice, just 544 kilograms, an amount on par with what is at your local grocery store. In other words, just changing the rate of doubling from every square to every third square, and doing it _early_ reduces an impossibly large problem to one that is easily managed. 
 
-The same is true for any exponentially growing process, from invasive species to virus growing in a body to infections growing and spreading in a population. If you somehow change the game and reduce the rate of growth _early_, you have a much, much more managble problem on your hands.  Consider your immune response to a new virus infection. The first time around it takes days for your virus to recognize the threat and mount a sizeable immune response---B & T cells need to be activated, proliferate, create their effectors and so on. In the mean time the virus population is well on its way to enormous sizes, you get sick and feel rotten (hopefully not much more than that), and you likely spread the virus to someone new. Now the _second_ time you encounter this virus your immune system is ready. It has a head start and can start reducing virus population growth rates almost immediately. The virus is cleared out well before it reaches problematic levels. Vaccines work the same way; they give your immune system a head start so they can fight back early on, and that makes all the difference.
+The same is true for any exponentially growing process, from invasive species to virus growing in a body to infections growing and spreading in a population. If you somehow change the game and reduce the rate of growth _early_, you have a much, much more manageable problem on your hands.  Consider your immune response to a new virus infection. The first time around it takes days for your body to recognize the threat and mount a sizeable immune response---B & T cells need to be activated, proliferate, create their effectors and so on. In the meantime the virus population is well on its way to enormous sizes, you get sick and feel rotten (hopefully not much more than that), and you likely spread the virus to someone new. Now the _second_ time you encounter this virus your immune system is ready. It has a head start and can start reducing virus population growth rates almost immediately. The virus is cleared out well before it reaches problematic levels. Vaccines work the same way; they give your immune system a head start so they can fight back early on, and that makes all the difference.
 
 ```{r, fig.cap="Actual and simulated numbers of COVID-19 deaths with earlier interventions. From www.nytimes.com/2020/05/20/us/coronavirus-distancing-deaths.html."}
 
