--- a/SIR.Rmd
+++ b/SIR.Rmd
@@ -35,13 +35,13 @@ theme_set(theme_minimal())
 How does disease spread in a population? How do epidemics work? 
 
 # Common processes
-At this point we have all seen at least one epidemic, if not many, happen around us. There have been flare ups of measles in many communities with low vaccination rates, two large Ebola virus epidemics in X and Y in recent years, and of course the Covid-19 pandemic^[A pandemic is just an epidemic with a global scale.]. And that is just epidemics in humans. In animals there are myriad epidemics every year---EXAMPLES---though most of the time these go unnoticed by the general population. Even plants have epidemic disease^[One disease ecologist has made a strong case that plants even have sexually transmitted infections. Pollinators, after all, often transmit infections.]. While the host populations and the etiologies^[Underlying causes of disease.] vary from viruses to bacteria to fungi to multicellular organisms^[Parasitic barnacles? Check! Parasitic plants? There are many, including mistletoes. Birds? Yup! Just look at the brown cow birds. ], disease ecologists and epidemiologists see a common set of processes at work in all of these epidemics. 
+At this point we have all seen at least one epidemic, if not many, happen around us. There have been flare ups of measles in many communities with low vaccination rates, two large Ebola virus epidemics in X and Y in recent years, and of course the COVID-19 pandemic^[A pandemic is just an epidemic with a global scale.]. And that is just epidemics in humans. In animals there are myriad epidemics every year, though most of the time these go unnoticed by the general population. Even plants have epidemic disease^[One disease ecologist has made a strong case that plants even have sexually transmitted infections. Pollinators, after all, often transmit infections.]. While the host populations and the etiologies^[Underlying causes of disease.] vary from viruses to bacteria to fungi to multicellular organisms^[Parasitic barnacles? Check! Parasitic plants? There are many, including mistletoes. Birds? Yup! Just look at the brown cow birds. ], disease ecologists and epidemiologists see a common set of processes at work in all of these epidemics. 
 
 1. **Transmission**. This is the process by which uninfected, but susceptible individuals become infected. There are several routes of transmission (e.g., by direct contact, from the environment, via the bite of some arthropod vector), but we'll come back to these later. 
 
-2.  **Virulence**. This is the disease caused by infection---morbidity---potentially including death---mortality. This can range from barely detectable to mild (e.g., a fever and the sniffles) to very severe (e.g., bleeding out of every orifice).  Actually, every biological and medical discipline seems to use this word differently^[To a virologist, virulence means the capacity to replicate efficiently in a host, but to a doctor virulence usually refers to the severity of symptoms.]. I'm a disease ecologist and so we will think about virulence as the disease-induced reduction in host fitness. This usually implies direct mortality, although it could also be making an individual sick enough they are more likely to die from other causes (e.g., predation, starvation). It would also include loss of reproductive output^[There are many, many castrating parasites, and not all of them are sexually-transmitted.]. 
+2.  **Virulence**. This is the disease caused by infection---morbidity---potentially including death---mortality. This can range from barely detectable to mild (e.g., a fever and the sniffles) to very severe (e.g., bleeding out of every orifice).  Actually, every biological and medical discipline seems to use this word differently^[To a virologist, virulence means the capacity to replicate efficiently in a host, but to a doctor virulence usually refers to the severity of symptoms.]. I'm a disease ecologist and so we will think about virulence as the disease-induced reduction in host fitness. This usually implies direct mortality, although it could also be making an individual sick enough that they are more likely to die from other causes (e.g., predation, starvation). It would also include loss of reproductive output^[There are many, many castrating parasites, and not all of them are sexually-transmitted.]. 
  
-3. **Recovery**.  The job of the immune system is to prevent infections from taking hold and and to clear them out if they get established. When we say recovery, we mean the latter. Yes, there's lots of fascinating complexities to how this all works^[It is worth noting that while we tend to take a very mammalian-focused view of immunology, with innate and acquired branches, B- and T-cells, cytokines and all of that, virtually every organism has some sort of immune system.  Have you heard of the CRISPR-Cas9 system that is all the rage in molecular biology? It comes from the antiviral defense system of bacteria. And plants have sophisticated immune responses, too.], but for our purposes we need to make only one distinction: Is there immune memory or not? If not, individuals recover, but can be re-infected. If there is memory, recovered individuals are resistant to re-infection, at least for some time^[Yes, immunity to some pathogens wains. That is why you need booster shots, e.g., for tetanus.].  
+3. **Recovery**.  The job of the immune system is to prevent infections from taking hold and to clear them out if they get established. When we say recovery, we mean the latter. Yes, there's lots of fascinating complexities to how this all works^[It is worth noting that while we tend to take a very mammalian-focused view of immunology, with innate and acquired branches, B- and T-cells, cytokines and all of that, virtually every organism has some sort of immune system.  Have you heard of the CRISPR-Cas9 system that is all the rage in molecular biology? It comes from the antiviral defense system of bacteria. And plants have sophisticated immune responses, too.], but for our purposes we need to make only one distinction: Is there immune memory or not? If not, individuals recover, but can be re-infected. If there is memory, recovered individuals are resistant to re-infection, at least for some time^[Yes, immunity to some pathogens wains. That is why you need booster shots, e.g., for tetanus.].  
 
 That's it. Sure, we can make all of these processes more nuanced and complex, but everything we might add, disease-wise, can be shoe-horned into one of these processes. Now let's see how they work together to make an epidemic!
 
@@ -58,7 +58,7 @@ textrect(c(0.5, 0.65), lab ="I", radx = 0.07, rady = 0.2, cex = 2)
 textrect(mid=c(0.91, 0.65), lab ="R",  radx = 0.07, rady = 0.2, cex = 2)
 ```
 
-First, let us be explicit about our scale of interest. It is the population, some group of individuals that interact and are largely independent of other groups. Think of a city or a herd or all of the tadpoles in a pond. We are then interested in whether and how infections^[Remember, infection $\neq$ disease.] spread through this population, how many or what fraction^[Why do I keep saying number or fraction? Well, we can think about an epidemic in either way; the number (or density) of individuals that are sick, say, or the fraction or proportion of the entire population that are sick. They are _largely_ interchangeable, but no always. I'll use numbers from here on out sine it is more intuitive for most people.] are infected at any given time, how many or what fraction become infected, die, and so on. Given these goals, it makes sense that we need to divide the population into those that are susceptible, those that are infected, and, assuming that individuals can recover and become resistant to re-infection, a recovered/resistant group. We often call these groups _boxes_ or _bins_ or _compartments_^[Indeed, these are called compartment models.] and for simplicity we call them $S$, $I$, and $R$.
+First, let us be explicit about our scale of interest. It is the population, some group of individuals that interact and are largely independent of other groups. Think of a city or a herd or all of the tadpoles in a pond. We are then interested in whether and how infections^[Remember, infection $\neq$ disease.] spread through this population, how many or what fraction^[Why do I keep saying number or fraction? Well, we can think about an epidemic in either way; the number (or density) of individuals that are sick, say, or the fraction or proportion of the entire population that are sick. They are _largely_ interchangeable, but not always. I'll use numbers from here on out sine it is more intuitive for most people.] are infected at any given time, how many or what fraction become infected, die, and so on. Given these goals, it makes sense that we need to divide the population into those that are susceptible, those that are infected, and, assuming that individuals can recover and become resistant to re-infection, a recovered/resistant group. We often call these groups _boxes_ or _bins_ or _compartments_^[Indeed, these are called compartment models.] and for simplicity we call them $S$, $I$, and $R$.
 
 The next step is to connect these boxes. How do we get new infections? They come from susceptible individuals that get infected through the process of transmission. What happens to the infected individuals? They might be lost from the population due to disease-induced mortality, a.k.a. virulence, or they can recover to the resistant class. That's it, at least for a simple infection in a simple population^[Sure, we could add births and deaths due to other things. We could add carrying capacities. We could think about different age classes or sexes or those with and without pre-existing conditions. We could make this all kinds of complicated, but all of those are simply variations on this theme. And anyway, what's wrong with starting simply?!].
 
@@ -301,7 +301,7 @@ SIR <- sim(SIR)
 
 OK, now here's what the model actually does (using the parameters we imagined above). How does it differ from your predictions? Why? (This is a good time to stop and refine or reconcile your thinking before moving on.) Do you understand why $I$ goes up and down? Why $S$ only declines and $R$ only increases? What happened to the total population size, $N$? Does this make sense to you?
 
-```{r, fig.margin=TRUE, fig.cap="Epidemic dynamics of an SIR model with $\\beta = 0.5$, $\\gamma=0.1$, and $\\phi=0.2$ and starting from an a population with $S=100$ and $I=1$."}
+```{r, fig.margin=TRUE, fig.cap="Epidemic dynamics of an SIR model with $\\beta = 0.5$, $\\gamma=0.1$, and $\\phi=0.2$ and starting from a population with $S=100$ and $I=1$."}
 out(SIR) %>% 
   # turn it from wide to long
   gather(key="Box", value="Number", S, I, R) %>% 
@@ -393,7 +393,7 @@ This is just one example of how you can modify a compartment model to better mat
 Lastly, why did the epidemic fade? That is, why did the infected category eventually decline to near zero levels? I hope you can intuitively answer that: like a fire running out of fuel, the epidemic ran out of susceptible individual to infect (around day 12 or 13) and then those individuals that were infected at that point eventually died or recovered. 
 
 
-We can better understand the growth and decline of infecteds by thinking about the rate at which infections are gained (and lost) as a function of the number of infected individuals, $I$, sort of like we did when thinking about population growth rate in the exponential and logistic models. 
+We can better understand the growth and decline of those infected by thinking about the rate at which infections are gained (and lost) as a function of the number of infected individuals, $I$, sort of like we did when thinking about population growth rate in the exponential and logistic models. 
 
 $$
 \frac{dI}{dt} = \overbrace{ \beta\frac{I}{N}S }^{gains} - \overbrace{\gamma I}^{losses}
@@ -521,7 +521,7 @@ In actual practice, researchers _do_ use this approach to estimate $R_0$, but ac
 
 You can think about most public health interventions as aimed at reducing $R_t$ or $R_0$ so that, on average, each infected individual produces less than one new infection. When this happens, the epidemic will start to fade. Of course this happens naturally when an infection has spread so much that it runs out of susceptible hosts^[[Although it can take a long time get there!](https://www.nytimes.com/interactive/2020/05/28/upshot/coronavirus-herd-immunity.html)]. Like a wildfire running out of unburned trees, the spread of the infection will slow down and eventually fade out. What's more, like the unburned trees after a fire, an epidemic will not generally infect everyone, even if left uncontrolled. This was one of the more surprising results from early epidemic models. Even highly transmissible infections will not reach everyone. 
 
-This finding, and the underlying logic, that the we might reach a critical level of "**heard immunity**", has featured prominently in discussions about how the Covid-19 pandemic might end. If a large enough fraction of the population is immune (i.e., in the $R$ class) then infected individuals will, on average, fail to pass on their infection to someone else and the epidemic will wain. This has sometimes led to a I-might-as-well-get-it-over-with attitude in some, although [this is not without serious risks](https://www.nytimes.com/2020/04/08/opinion/coronavirus-parties-herd-immunity.html). A much better strategy is to intervene earlier in ways that reduce $R_t \text{ or } R_0 < 1$.) Indeed you can map all interventions on to one or more components of the equation for $R_0$ or the underlying bits in our SIR model.
+This finding, and the underlying logic, that we might reach a critical level of "**heard immunity**", has featured prominently in discussions about how the COVID-19 pandemic might end. If a large enough fraction of the population is immune (i.e., in the $R$ class) then infected individuals will, on average, fail to pass on their infection to someone else and the epidemic will wain. This has sometimes led to a I-might-as-well-get-it-over-with attitude in some, although [this is not without serious risks](https://www.nytimes.com/2020/04/08/opinion/coronavirus-parties-herd-immunity.html). A much better strategy is to intervene earlier in ways that reduce $R_t \text{ or } R_0 < 1$.) Indeed you can map all interventions on to one or more components of the equation for $R_0$ or the underlying bits in our SIR model.
 
 * **Vaccination** essentially reduces $S$ and puts those individuals into the $R$ class. This means fewer individuals that can get sick and, if you get a high enough fraction of the population vaccinated, that first infected individual will not find enough susceptibles in the population to replace itself before it dies or recovers. This is heard immunity, but without all of the morbidity and mortality to get there^[[Yes, vaccines can have side effects, but those are much, much, much less severe than the disease.](https://gimletmedia.com/shows/science-vs/n8ho59/)]. What's more, you can protect particularly vulnerable groups, such as the very young or old or immunocompromised, by vaccinating the people around them.    
   There is a simple equation that describes the fraction of the population that must be vaccinated, which we call $q$, to ensure that $R_0 \leq 1$: $q \geq 1-\tfrac{1}{R_0}$. As you would expect, the higher $R_0$, the greater that fraction you must vaccinate. 
