--- a/Transmission.Rmd
+++ b/Transmission.Rmd
@@ -51,7 +51,7 @@ which can be read, from left to right, as susceptible hosts ($S$) contact other 
   * Contacts are made randomly. Every individual is equally likely to contact any other individual. There are no social networks here, nor geographic space. 
   * Individuals in a box are identical. All individuals in the $S$ box are equally susceptible to infection and all those in the $I$ box are equally infectious. Moreover, there is no time-course of infectiousness (at least as written); as soon as an individual enters the $I$ box it is just as infectious as an individual that has been there for ages.
   
-These assumptions are, well, wrong, but it might not matter a great deal. At least in large populations it might be reasonable to assume that the more-infectious-than-average individuals are balanced out by a group of less-infectious-than-average individuals, and so on. Similarly, at a large scale, contact structure (networks, space, etc.) might sort of wash out. In other words, this model, or transmission term in a model, does a pretty good job of describing the average transmission rate^[These and similar models are called "mean field" by the mathematically inclined. We love our jargon!]. We will come back to this averageness in another writing, but for now let's just note the assumptions and move on.
+These assumptions are, well, wrong, but it might not matter a great deal. At least in large populations it might be reasonable to assume that the more-infectious-than-average individuals are balanced out by a group of less-infectious-than-average individuals, and so on. Similarly, at a large scale, contact structure (networks, space, etc.) might sort of wash out. In other words, this model, or transmission term in a model, does a pretty good job of describing the average transmission rate^[These and similar models are called "mean field" by the mathematically inclined. We love our jargon!]. We will come back to this "averageness" in another writing, but for now let's just note the assumptions and move on.
 
 
 
@@ -87,7 +87,7 @@ Before discussing this more, let me introduce the common alternative formulation
 \end{aligned}
 \end{equation*}
 
-where $\beta =  c'' \pi$ as before^[Note that this new $\beta$ has different units than the frequency-dependent version.]. In this density-dependent version of the transmission term, the rate of transmission (and force of infection) increase with the number or density of infected hosts, hence the name^[This is almost precisely the way chemists thing of the rates of chemical reaction in gases or fluids. It's just molecules bouncing around randomly and when the right two happen to contact there is some probability of them becoming a new molecule. Of course animals are not molecules, but still, the model of transmission often works quite well!]. 
+where $\beta =  c'' \pi$ as before^[Note that this new $\beta$ has different units than the frequency-dependent version.]. In this density-dependent version of the transmission term, the rate of transmission (and force of infection) increase with the number or density of infected hosts, hence the name^[This is almost precisely the way chemists think about the rates of chemical reactions in gases or fluids. It's just molecules bouncing around randomly and when the right two happen to contact there is some probability of them becoming a new molecule. Of course animals are not molecules, but still, the model of transmission often works quite well!]. 
 
 ## Why it matters
 OK, so we have two versions that look pretty similar, only in one we divide by $N$. What's the big deal? Well, it turns out that it matters. 
@@ -121,7 +121,7 @@ R_{0_{DD}} = \frac{\beta N}{\alpha + \gamma}.
 $$
 This means that the ability for an infection to take-off in a population depends on the size (or density) of the population ($N$). Below some critical population size, the infection cannot successfully invade. Sure, there may be a bit of transmission, but it should sputter out. 
 
-This density-dependent logic forms the basis for culling to prevent disease from invading wildlife and agricultural populations^[I'm focusing on the invasion side of things. Culling or depopulation is also used to prevent continued transmission during epidemics of economically important diseases such as avian influenza in chickens, African swine fever in pigs, and foot and mouth disease in cattle.]. It has historically been applied broadly in wildlife because there are few other levers to pull^[For instance, [culling of Badgers, which can carry tuberculosis, in the UK.](https://www.nytimes.com/2019/03/09/science/culling-badgers-disease.html)]. As in most things, the [reality is more complicated than theory](https://www.researchgate.net/publication/7080962_Should_we_expect_population_thresholds_for_wildlife_disease), but it remains an influental line of thought.
+This density-dependent logic forms the basis for culling to prevent disease from invading wildlife and agricultural populations^[I'm focusing on the invasion side of things. Culling or depopulation is also used to prevent continued transmission during epidemics of economically important diseases such as avian influenza in chickens, African swine fever in pigs, and foot and mouth disease in cattle.]. It has historically been applied broadly in wildlife because there are few other levers to pull^[For instance, [culling of Badgers, which can carry tuberculosis, in the UK.](https://www.nytimes.com/2019/03/09/science/culling-badgers-disease.html)]. As in most things, the [reality is more complicated than theory](https://www.researchgate.net/publication/7080962_Should_we_expect_population_thresholds_for_wildlife_disease), but it remains an influential line of thought.
 
 
 # Which version is most realistic?
@@ -131,7 +131,7 @@ The reality is that both versions are cartoons, extreme simplifications of reali
 
 But _still_, which is a better representation? Let me start by pointing out their flaws. The frequency-dependent model says that population size does not matter, but obviously at very low population sizes, this cannot hold. I mean, how can you have 10 unique contacts per day if there are only two of you? The frequency-dependent model falls apart at the low end. 
 
-```{r, fig.margin=TRUE, fig.cap="Contact rates and rates of transmission in the frequency-dependent and density-dependent models, as before, with an a saturating \"in-between\" version in black."}
+```{r, fig.margin=TRUE, fig.cap="Contact rates and rates of transmission in the frequency-dependent and density-dependent models, as before, with a saturating \"in-between\" version in black."}
 df <- expand_grid(Density = 1:500, 
                   Form = c("Frequency-dependent", "Density-dependent"))
 df %>% 
@@ -155,7 +155,7 @@ When researchers have actually measured transmission rates across densities they
 
 # Modes of horizontal transmission
 
-So far all of the scenarios for how transmission might work would fall into the box of horizontal transmission, and the box within that of direct contact. This would include parasites pass between hosts through casual contact (e.g., speaking to another person, shaking hands), sex, aerosols, and so on. We just need to decide what sort of contact is potentially infectious and then that is the contact rate of interest. But there are many other ways that parasites go from one host to the next, and they often involve an intermediate. But there are other routes of horizontal transmission that do not involve direct contact. Let's review a few.
+So far all of the scenarios for how transmission might work would fall into the box of horizontal transmission, and the box within that of direct contact. This would include parasites passed between hosts through casual contact (e.g., speaking to another person, shaking hands), sex, aerosols, and so on. We just need to decide what sort of contact is potentially infectious and then that is the contact rate of interest. But there are many other ways that parasites go from one host to the next, and they often involve an intermediate. But there are other routes of horizontal transmission that do not involve direct contact. Let's review a few.
 
 ## Transmission from vectors
 
@@ -197,7 +197,7 @@ However, other parasites actually seek out their hosts. They swim or fly to thei
 
 Sometimes parasites get into new hosts when their former host is consumed. That is, predators can get their prey's parasites^[This raises an interesting question about whether and why predators are particularly vulnerable to disease. Think about the taboo around cannibalism, an otherwise efficient way to get precisely the protein, minerals, and nutrients needed to make more of you.]. Frequently parasites with complex life cycles, that is (almost always multicellular) parasites that have distinct reproductive and intermediate stages in different hosts, are transmitted this way. 
 
-For instance, the trematode flat worm that frequently causes limb deformities in amphibians,  [_Ribeiroia ondatrae_](https://en.wikipedia.org/wiki/Ribeiroia), begin life as eggs pooped into the water by wading birds or mammals. These develop into miracidia, a free-living, free-swimming stage that attacks ram's horn snails and form a stage called rediae^[Castrating the snails!], which then release a second free-living stage called cercariae that encyst in amphibians^[Especially near or in the limb bud of tadpoles, which can split prevent a leg from growing or split it in two!] and fish and form metacercariae. These infected frogs are then preyed upon by birds (and mammals)---That's the trophic transfer! The rest was just lead up---in which the metacercariae develop into adults^[Finally a stage with a simple name!] in the GI track, mate, and lay eggs. Quite a life cycle, right? 
+For instance, the trematode flat worm that frequently causes limb deformities in amphibians,  [_Ribeiroia ondatrae_](https://en.wikipedia.org/wiki/Ribeiroia), begin life as eggs pooped into the water by wading birds or mammals. These develop into miracidia, a free-living, free-swimming stage that attacks ram's horn snails and form a stage called rediae^[Castrating the snails!], which then release a second free-living stage called cercariae that encyst in amphibians^[Especially near or _in_ the limb bud of tadpoles, which can prevent a leg from growing or split it in two!] and fish and form metacercariae. These infected frogs are then preyed upon by birds (and mammals)---That's the trophic transfer! The rest was just lead up---in which the metacercariae develop into adults^[Finally a stage with a simple name!] in the GI track, mate, and lay eggs. Quite a life cycle, right? 
 
 I'm sure you are dying to know how one might describe this trophic transmission mathematically. Well, let's walk through the logic. An uninfected host gets it by consuming an infected prey, so there are the two parts: 
 
@@ -211,7 +211,7 @@ With all of these pieces I believe we could kludge together some sort of reasona
 
 # Vertical transmission
 
-Lastly, there are some infections that are passed on from mother to offspring, exclusively or in addition to other routes of transmission. Think HIV or _Toxoplasma gondii_^[The acronym [CHEAPTORCHES](https://en.wikipedia.org/wiki/Vertically_transmitted_infection#Types_of_infections) includes many vertically transmitted pathogens of humans.] or _Wolbachia_. This mother-to-offspring route is called vertical transmission, as opposed to horizontal, which includes everything else we have mentioned so far. It is separated out because while all other forms of transmission require some sort of contact between a source and a donor vertical transmission happens through reproduction. It also leads to some very different evolutionary outcomes, but more on this later.
+Lastly, there are some infections that are passed on from mother to offspring, exclusively or in addition to other routes of transmission. Think HIV or _Toxoplasma gondii_^[The acronym [CHEAPTORCHES](https://en.wikipedia.org/wiki/Vertically_transmitted_infection#Types_of_infections) includes many vertically transmitted pathogens of humans.] or _Wolbachia_. This mother-to-offspring route is called vertical transmission, as opposed to horizontal, which includes everything else we have mentioned so far. It is separated out because while all other forms of transmission require some sort of contact between a source and a donor, vertical transmission happens through reproduction. It also leads to some very different evolutionary outcomes, but more on this later.
 
 Vertical transmission can be divided further by how the parasite gets into the offspring. Some parasites move from the mother into the egg (transovarial) or across the placenta into the embryo (transplacental), which is sometimes called _true vertical transmission_. These tend to be obligately vertically transmitted, meaning that this is (virtually) the only way they get transmitted^[There are some really interesting questions about whether a parasite that is solely vertically transmitted can afford to be at all virulent, and whether those that _are_ virulent have some sneaky, unobserved means of transmission... more on this another time.]. Others, called _pseudo vertically transmitted_, are transferred during birth or egg laying, via  contamination from blood or goop or whatnot^[I'm an ecologist, not a obstetrician.]. This opportunistic route of transmission is usually a side gig for a horizontally transmitted parasite, but hey, Nature is complicated and these are not hard and fast rules. 
 
@@ -227,7 +227,7 @@ Let me end with a few final thoughts:
 
 * These are artificial distinctions; not every parasite fits neatly into a box. Moreover, there are other ways of classifying modes of transmission that might be more useful for different purposes. Plus, some parasites are transmitted via multiple routes! 
 
-* Biologically important distinctions in how parasites are transmitted do not always lead to different ways of describing transmission. Remember, true and pseudo-vertical transmission are described essentially the say way as are biological and mechanical transmission by vectors. Even transmission from the environment and via free-swimming, host-seeking parasites might be described the same way! 
+* Biologically important distinctions in how parasites are transmitted do not always lead to different ways of describing transmission. Remember, true and pseudo-vertical transmission are described essentially the same way as are biological and mechanical transmission by vectors. Even transmission from the environment and via free-swimming, host-seeking parasites might be described the same way! 
 
 * All of the mathematics I have presented are simplified forms. They are great places to start, but sometimes the realities of biology force us to deviate from these simple forms. As I noted in the beginning, there is a lot of biology wrapped up in transmission!
 
