--- a/Models_Fail.Rmd
+++ b/Models_Fail.Rmd
@@ -3,8 +3,13 @@ title: "Why (model) predictions fail"
 subtitle: "YYY"
 author: "Jesse Brunner"
 date: "`r Sys.Date()`"
-output:
-  tufte::tufte_handout: default
+output: tint::tintPdf
+latexfonts:
+  - package: newtxmath
+    options: 
+      - cmintegrals
+      - cmbraces
+  - package: ebgaramond-maths
 header-includes:
    - \usepackage{booktabs}
    - \usepackage{cancel}
@@ -38,7 +43,7 @@ Well I have a counter example: The stock market. You think meteorology is poor a
 
 OK, OK, I'll step off my soap box and stop ranting. There is a good question here: why do models fail? I've quoted George Box in saying that all models are wrong, but some are useful. Let's focus on the question of why they are wrong. 
 
-I think we can break this into four types of issues.
+I think we can break this into three types of issues.
 
 
 # Parameterization: your inputs are problematic
